# multimodal-hybridsearch-rag

./: main.py  pyproject.toml  requirements.txt
AdvancedChunking/: semanicChunking.ipynb
DataIngestion/: ingest_1.ipynb  ingest_2.ipynb  ingest_3.ipynb  ingest_4.ipynb  ingest_SQL_5.ipynb
DataIngestion/data/databases/: company.db
DataIngestion/data/structured_files/: inventory.xlsx
HybridSearch/: HyDE.ipynb  hybrid_search.ipynb  re_ranking.ipynb
HybridSearch/output/langchain/: chroma.sqlite3
HybridSearch/output/steve_jobs_for_hyde.db/: chroma.sqlite3
MultiModalRAG/: MultiModalRAG.ipynb  debug_cell.py  debug_funcs.py  llm_config.txt
VectorEmbeddings_2/: embedding.ipynb
VectorStore_3/: chromaDB_1.ipynb
VectorStore_3/chroma_db/: chroma.sqlite3
